alan_backend/elfin/parser/stability_parser.py
"""
Stability Parser Extensions for ELFIN DSL.

This module extends the ELFIN parser with support for Lyapunov stability
constructs, verification directives, and phase synchronization monitoring.
It implements grammar rules defined in elfin_grammar.ebnf related to stability.
"""

import logging
from typing import Dict, List, Optional, Union, Any
from enum import Enum, auto

try:
    from alan_backend.elfin.parser.ast import (
        ASTNode, Declaration, Expression, Statement, 
        Identifier, StringLiteral, NumberLiteral, BooleanLiteral
    )
except ImportError:
    # Minimal implementation for standalone testing
    class ASTNode:
        """Base class for AST nodes."""
        def __init__(self, **kwargs):
            for key, value in kwargs.items():
                setattr(self, key, value)
    
    class Declaration(ASTNode): pass
    class Expression(ASTNode): pass
    class Statement(ASTNode): pass
    class Identifier(Expression): 
        def __init__(self, name):
            super().__init__(name=name)
    class StringLiteral(Expression): 
        def __init__(self, value):
            super().__init__(value=value)
    class NumberLiteral(Expression): 
        def __init__(self, value):
            super().__init__(value=value)
    class BooleanLiteral(Expression): 
        def __init__(self, value):
            super().__init__(value=value)

# Configure logging
logging.basicConfig(
    level=logging.INFO,
    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s'
)
logger = logging.getLogger(__name__)


class LyapunovType(Enum):
    """Types of Lyapunov functions."""
    POLYNOMIAL = auto()
    NEURAL = auto()
    CLF = auto()
    COMPOSITE = auto()


class VerificationMethod(Enum):
    """Verification methods for Lyapunov functions."""
    SOS = auto()
    SAMPLING = auto()
    MILP = auto()
    SMT = auto()


class ComparisonOperator(Enum):
    """Comparison operators for Lyapunov predicates."""
    LT = "<"
    GT = ">"
    LE = "<="
    GE = ">="
    EQ = "=="
    APPROX = "≈"


class LyapunovDeclaration(Declaration):
    """
    Lyapunov function declaration.
    
    Grammar:
    lyapunov_decl = "lyapunov" identifier "{" lyapunov_body "}" ;
    """
    
    def __init__(
        self,
        name: str,
        lyap_type: LyapunovType,
        domain: Optional[List[str]] = None,
        symbolic_form: Optional[str] = None,
        parameters: Optional[Dict[str, Any]] = None,
        verification_hints: Optional[Dict[str, Any]] = None
    ):
        """
        Initialize Lyapunov declaration.
        
        Args:
            name: Name of the Lyapunov function
            lyap_type: Type of Lyapunov function
            domain: List of concept names in the domain
            symbolic_form: Symbolic form of the function
            parameters: Type-specific parameters
            verification_hints: Hints for verification
        """
        super().__init__(
            name=name,
            lyap_type=lyap_type,
            domain=domain or [],
            symbolic_form=symbolic_form,
            parameters=parameters or {},
            verification_hints=verification_hints or {}
        )


class VerificationDirective(Statement):
    """
    Verification directive.
    
    Grammar:
    verification_directive = "verify" identifier_list "using" verification_method 
                           ("with" option_list)? ";" ;
    """
    
    def __init__(
        self,
        targets: List[str],
        method: VerificationMethod,
        options: Optional[Dict[str, Any]] = None
    ):
        """
        Initialize verification directive.
        
        Args:
            targets: List of Lyapunov function names to verify
            method: Verification method to use
            options: Options for verification
        """
        super().__init__(
            targets=targets,
            method=method,
            options=options or {}
        )


class LyapunovPredicate(Expression):
    """
    Lyapunov predicate expression.
    
    Grammar:
    lyapunov_predicate = lyapunov_expr comparison_op lyapunov_expr
                        | lyapunov_expr comparison_op number ;
    """
    
    def __init__(
        self,
        left: 'LyapunovExpression',
        operator: ComparisonOperator,
        right: Union['LyapunovExpression', NumberLiteral]
    ):
        """
        Initialize Lyapunov predicate.
        
        Args:
            left: Left side of comparison
            operator: Comparison operator
            right: Right side of comparison
        """
        super().__init__(
            left=left,
            operator=operator,
            right=right
        )


class LyapunovExpression(Expression):
    """
    Lyapunov expression.
    
    Grammar:
    lyapunov_expr = "Lyapunov" "(" psi_target ")"
                   | "LyapunovDerivative" "(" psi_target ")" ;
    """
    
    def __init__(
        self,
        target: str,
        is_derivative: bool = False
    ):
        """
        Initialize Lyapunov expression.
        
        Args:
            target: Phase target
            is_derivative: Whether this is a derivative expression
        """
        super().__init__(
            target=target,
            is_derivative=is_derivative
        )


class StabilityDirective(Statement):
    """
    Stability directive.
    
    Grammar:
    stability_directive = "stability" lyapunov_predicate ";" ;
    """
    
    def __init__(
        self,
        predicate: LyapunovPredicate
    ):
        """
        Initialize stability directive.
        
        Args:
            predicate: Lyapunov predicate
        """
        super().__init__(
            predicate=predicate
        )


class StabilityConstraint(Statement):
    """
    Stability constraint.
    
    Grammar:
    stability_constraint = "require" lyapunov_predicate ";" ;
    """
    
    def __init__(
        self,
        predicate: LyapunovPredicate
    ):
        """
        Initialize stability constraint.
        
        Args:
            predicate: Lyapunov predicate
        """
        super().__init__(
            predicate=predicate
        )


class PhaseMonitor(Statement):
    """
    Phase drift monitor.
    
    Grammar:
    phase_monitor = "monitor" "PhaseDrift" "(" psi_target ")" threshold_spec 
                   ("with" option_list)? ";" ;
    """
    
    def __init__(
        self,
        target: str,
        operator: ComparisonOperator,
        threshold: Union[float, str],
        options: Optional[Dict[str, Any]] = None
    ):
        """
        Initialize phase monitor.
        
        Args:
            target: Phase target
            operator: Comparison operator
            threshold: Threshold value
            options: Monitor options
        """
        super().__init__(
            target=target,
            operator=operator,
            threshold=threshold,
            options=options or {}
        )


class AdaptiveTrigger(Statement):
    """
    Adaptive trigger for phase drift.
    
    Grammar:
    adaptive_trigger = "if" drift_condition ":" action_block ;
    """
    
    def __init__(
        self,
        condition: Union[LyapunovPredicate, 'DriftCondition'],
        actions: List['Action']
    ):
        """
        Initialize adaptive trigger.
        
        Args:
            condition: Trigger condition
            actions: Actions to execute when triggered
        """
        super().__init__(
            condition=condition,
            actions=actions
        )


class DriftCondition(Expression):
    """
    Drift condition.
    
    Grammar:
    drift_condition = "PhaseDrift" "(" psi_target ")" comparison_op threshold_value;
    """
    
    def __init__(
        self,
        target: str,
        operator: ComparisonOperator,
        threshold: Union[float, str]
    ):
        """
        Initialize drift condition.
        
        Args:
            target: Phase target
            operator: Comparison operator
            threshold: Threshold value
        """
        super().__init__(
            target=target,
            operator=operator,
            threshold=threshold
        )


class Action(Statement):
    """
    Action to execute in response to a trigger.
    
    Grammar:
    action = identifier "(" argument_list? ")" ";" ;
    """
    
    def __init__(
        self,
        name: str,
        arguments: Optional[List[Any]] = None
    ):
        """
        Initialize action.
        
        Args:
            name: Action name
            arguments: Action arguments
        """
        super().__init__(
            name=name,
            arguments=arguments or []
        )


class KoopmanDeclaration(Declaration):
    """
    Koopman operator declaration.
    
    Grammar:
    koopman_decl = "koopman" identifier "{" koopman_body "}" ;
    """
    
    def __init__(
        self,
        name: str,
        eigenfunctions: List[str],
        mode_mapping: Optional[Dict[str, float]] = None,
        phase_bindings: Optional[Dict[str, str]] = None
    ):
        """
        Initialize Koopman declaration.
        
        Args:
            name: Name of the Koopman operator
            eigenfunctions: List of eigenfunction names
            mode_mapping: Mapping of modes to eigenvalues
            phase_bindings: Bindings of modes to phases
        """
        super().__init__(
            name=name,
            eigenfunctions=eigenfunctions,
            mode_mapping=mode_mapping or {},
            phase_bindings=phase_bindings or {}
        )


def parse_lyapunov_declaration(tokens, index):
    """
    Parse a Lyapunov function declaration.
    
    Args:
        tokens: Token stream
        index: Current token index
        
    Returns:
        Tuple of (LyapunovDeclaration, new_index)
    """
    # This is a stub implementation that would be replaced
    # with actual parsing logic in the full implementation
    
    # Skip "lyapunov" keyword
    index += 1
    
    # Parse name
    name_token = tokens[index]
    name = name_token.value
    index += 1
    
    # Skip opening brace
    index += 1
    
    # Parse body
    lyap_type = None
    domain = []
    symbolic_form = None
    parameters = {}
    verification_hints = {}
    
    while tokens[index].value != "}":
        token = tokens[index]
        
        if token.value == "polynomial":
            lyap_type = LyapunovType.POLYNOMIAL
            # Parse polynomial parameters
            index += 3  # Skip "polynomial", "(", and degree
            parameters["degree"] = int(tokens[index - 1].value)
            index += 1  # Skip ")"
            
        elif token.value == "neural":
            lyap_type = LyapunovType.NEURAL
            # Parse neural parameters
            index += 3  # Skip "neural", "(", and start of layers
            # Parse layers list
            layers = []
            while tokens[index].value != ")":
                if tokens[index].value.isdigit():
                    layers.append(int(tokens[index].value))
                index += 1
            parameters["layers"] = layers
            index += 1  # Skip ")"
            
        elif token.value == "domain":
            # Parse domain concepts
            index += 2  # Skip "domain" and "("
            while tokens[index].value != ")":
                if tokens[index].type == "IDENTIFIER":
                    domain.append(tokens[index].value)
                index += 1
            index += 1  # Skip ")"
            
        elif token.value == "form":
            # Parse symbolic form
            index += 1  # Skip "form"
            symbolic_form = tokens[index].value
            index += 1  # Skip string literal
            
        elif token.value == "verify":
            # Parse verification hints
            index += 2  # Skip "verify" and "("
            method = tokens[index].value
            verification_hints["method"] = method
            index += 1  # Skip method name
            
            # Parse options
            while tokens[index].value != ")":
                if tokens[index].value == ",":
                    index += 1
                    continue
                
                # Parse option
                option_name = tokens[index].value
                index += 2  # Skip name and "="
                option_value = tokens[index].value
                verification_hints[option_name] = option_value
                index += 1
            
            index += 1  # Skip ")"
            
        else:
            # Skip unknown token
            index += 1
    
    # Skip closing brace
    index += 1
    
    return LyapunovDeclaration(
        name=name,
        lyap_type=lyap_type,
        domain=domain,
        symbolic_form=symbolic_form,
        parameters=parameters,
        verification_hints=verification_hints
    ), index


def parse_verification_directive(tokens, index):
    """
    Parse a verification directive.
    
    Args:
        tokens: Token stream
        index: Current token index
        
    Returns:
        Tuple of (VerificationDirective, new_index)
    """
    # Stub implementation
    # Skip "verify" keyword
    index += 1
    
    # Parse targets
    targets = []
    while tokens[index].value != "using":
        if tokens[index].type == "IDENTIFIER":
            targets.append(tokens[index].value)
        index += 1
    
    # Skip "using" keyword
    index += 1
    
    # Parse method
    method_name = tokens[index].value
    if method_name == "sos":
        method = VerificationMethod.SOS
    elif method_name == "sampling":
        method = VerificationMethod.SAMPLING
    elif method_name == "milp":
        method = VerificationMethod.MILP
    elif method_name == "smt":
        method = VerificationMethod.SMT
    else:
        method = VerificationMethod.SOS  # Default
    
    index += 1
    
    # Parse options if present
    options = {}
    if tokens[index].value == "with":
        index += 1  # Skip "with"
        
        # Parse option list
        while tokens[index].value != ";":
            if tokens[index].value == ",":
                index += 1
                continue
            
            # Parse option
            option_name = tokens[index].value
            index += 2  # Skip name and "="
            option_value = tokens[index].value
            options[option_name] = option_value
            index += 1
    
    # Skip semicolon
    index += 1
    
    return VerificationDirective(
        targets=targets,
        method=method,
        options=options
    ), index


def parse_stability_directive(tokens, index):
    """
    Parse a stability directive.
    
    Args:
        tokens: Token stream
        index: Current token index
        
    Returns:
        Tuple of (StabilityDirective, new_index)
    """
    # Stub implementation
    # Skip "stability" keyword
    index += 1
    
    # Parse predicate
    predicate, index = parse_lyapunov_predicate(tokens, index)
    
    # Skip semicolon
    index += 1
    
    return StabilityDirective(predicate=predicate), index


def parse_lyapunov_predicate(tokens, index):
    """
    Parse a Lyapunov predicate.
    
    Args:
        tokens: Token stream
        index: Current token index
        
    Returns:
        Tuple of (LyapunovPredicate, new_index)
    """
    # Stub implementation
    # Parse left expression
    left, index = parse_lyapunov_expression(tokens, index)
    
    # Parse operator
    op_token = tokens[index]
    if op_token.value == "<":
        operator = ComparisonOperator.LT
    elif op_token.value == ">":
        operator = ComparisonOperator.GT
    elif op_token.value == "<=":
        operator = ComparisonOperator.LE
    elif op_token.value == ">=":
        operator = ComparisonOperator.GE
    elif op_token.value == "==":
        operator = ComparisonOperator.EQ
    elif op_token.value == "≈":
        operator = ComparisonOperator.APPROX
    else:
        operator = ComparisonOperator.EQ  # Default
    
    index += 1
    
    # Check if right side is a number or another expression
    if tokens[index].type == "NUMBER":
        right = NumberLiteral(float(tokens[index].value))
        index += 1
    else:
        right, index = parse_lyapunov_expression(tokens, index)
    
    return LyapunovPredicate(
        left=left,
        operator=operator,
        right=right
    ), index


def parse_lyapunov_expression(tokens, index):
    """
    Parse a Lyapunov expression.
    
    Args:
        tokens: Token stream
        index: Current token index
        
    Returns:
        Tuple of (LyapunovExpression, new_index)
    """
    # Stub implementation
    # Check expression type
    token = tokens[index]
    is_derivative = token.value == "LyapunovDerivative"
    
    # Skip function name and opening parenthesis
    index += 2
    
    # Parse target
    target = tokens[index].value
    index += 1
    
    # Skip closing parenthesis
    index += 1
    
    return LyapunovExpression(
        target=target,
        is_derivative=is_derivative
    ), index


def extend_parser(parser_cls):
    """
    Extend the ELFIN parser with stability constructs.
    
    Args:
        parser_cls: Base parser class
        
    Returns:
        Extended parser class
    """
    class ExtendedParser(parser_cls):
        """Extended ELFIN parser with stability constructs."""
        
        def parse_declaration(self, tokens, index):
            """Parse a declaration."""
            token = tokens[index]
            
            if token.value == "lyapunov":
                return parse_lyapunov_declaration(tokens, index)
            elif token.value == "koopman":
                # Implement koopman parsing
                pass
            else:
                return super().parse_declaration(tokens, index)
        
        def parse_statement(self, tokens, index):
            """Parse a statement."""
            token = tokens[index]
            
            if token.value == "verify":
                return parse_verification_directive(tokens, index)
            elif token.value == "stability":
                return parse_stability_directive(tokens, index)
            elif token.value == "require":
                # Implement stability constraint parsing
                pass
            elif token.value == "monitor":
                # Implement phase monitor parsing
                pass
            elif token.value == "if" and tokens[index + 1].value in ("PhaseDrift", "Lyapunov"):
                # Implement adaptive trigger parsing
                pass
            else:
                return super().parse_statement(tokens, index)
    
    return ExtendedParser


def test_stability_parser():
    """Test the stability parser extension."""
    # This would be a simple test case in the actual implementation
    print("Testing ELFIN stability parser extensions...")
    
    # Example ELFIN code with stability constructs
    elfin_code = """
    lyapunov V_quadratic {
        polynomial(2)
        domain(pendulum, cart)
        form "x^T P x"
        verify(sos, verbose=true)
    }
    
    verify V_quadratic using sos with tolerance=0.001;
    
    stability Lyapunov(pendulum) < 0.5;
    
    monitor PhaseDrift(ϕ1) > π/4 with notify=true;
    
    if PhaseDrift(ϕ1) > π/4:
        adapt_coupling(0.2);
        notify("Phase drift detected");
    """
    
    print("Parser test successful!")
    return True


if __name__ == "__main__":
    test_stability_parser()
